--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <div id="popup">
+        <article>
+            <h1>Hi {{name}}</h2>
+            <p>Thanks for offering to provide feedback<br/>
+            The excerise I'm using is called a Johari Window<br/>
+            Select up to five or six of the adjectives you feel best describe me<br/>
+            James</p>
+            <button id="ok">OK</button>
+        </article>
+    </div>
     <div id='main'>
         <h1>Johari window for James</h1>
         <div>
