added flexbox start

--- a/index.html
+++ b/index.html
@@ -11,91 +11,91 @@
 <body>
     <div id="popup">
         <article>
-            <h1>Hi {{name}}</h2>
-            <p>Thanks for offering to provide feedback<br/>
-            The excerise I'm using is called a Johari Window<br/>
-            Select up to five or six of the adjectives you feel best describe me<br/>
-            James</p>
-            <button id="ok">OK</button>
+            <h1>Hi!</h2>
+                <p>Thanks for offering to provide feedback<br />
+                    The excerise I'm using is called a Johari Window<br />
+                    Select up to five or six of the adjectives you feel best describe me<br />
+                    James</p>
+                <button id="ok">OK</button>
         </article>
     </div>
     <div id='main'>
         <h1>Johari window for James</h1>
         <div>
             <div id='messages'></div>
-            <table id='adjectives'>
-                <tr>
-                    <td>able</td>
-                    <td>dependable</td>
-                    <td>intelligent</td>
-                    <td>patient</td>
-                    <td>sensible</td>
-                    <td>accepting</td>
-                    <td>dignified</td>
-                    <td>introverted</td>
-                    <td>powerful</td>
-                </tr>
-                <tr>
-                    <td>sentimental</td>
-                    <td>adaptable</td>
-                    <td>energetic</td>
-                    <td>kind</td>
-                    <td>proud</td>
-                    <td>shy</td>
-                    <td>bold</td>
-                    <td>extroverted</td>
-                    <td>knowledgable</td>
-                </tr>
-                <tr>
-                    <td>quiet</td>
-                    <td>silly</td>
-                    <td>brave</td>
-                    <td>friendly</td>
-                    <td>logical</td>
-                    <td>reflective</td>
-                    <td>spontaneous</td>
-                    <td>calm</td>
-                    <td>giving</td>
-                </tr>
-                <tr>
-                    <td>witty</td>
-                    <td>relaxed</td>
-                    <td>sympathetic</td>
-                    <td>caring</td>
-                    <td>happy</td>
-                    <td>mature</td>
-                    <td>religious</td>
-                    <td>tense</td>
-                    <td>cheerful</td>
-                </tr>
-                <tr>
-                    <td>helpful</td>
-                    <td>modest</td>
-                    <td>responsive</td>
-                    <td>trustworthy</td>
-                    <td>clever</td>
-                    <td>idealistic</td>
-                    <td>nervous</td>
-                    <td>searching</td>
-                    <td>warm</td>
-                </tr>
-                <tr>
-                    <td>complex</td>
-                    <td>independent</td>
-                    <td>observant</td>
-                    <td>self-assertive</td>
-                    <td>wise</td>
-                    <td>confident</td>
-                    <td>ingenious</td>
-                    <td>organised</td>
-                    <td>self-conscious</td>
-                </tr>
-            </table>
-            <button id="done">done</button>
+            <div id='adjectives'>
+
+                <div>able</div>
+                <div>dependable</div>
+                <div>intelligent</div>
+                <div>patient</div>
+                <div>sensible</div>
+                <div>accepting</div>
+                <div>dignified</div>
+                <div>introverted</div>
+                <div>powerful</div>
+
+
+                <div>sentimental</div>
+                <div>adaptable</div>
+                <div>energetic</div>
+                <div>kind</div>
+                <div>proud</div>
+                <div>shy</div>
+                <div>bold</div>
+                <div>extroverted</div>
+                <div>knowledgable</div>
+
+
+                <div>quiet</div>
+                <div>silly</div>
+                <div>brave</div>
+                <div>friendly</div>
+                <div>logical</div>
+                <div>reflective</div>
+                <div>spontaneous</div>
+                <div>calm</div>
+                <div>giving</div>
+
+
+                <div>witty</div>
+                <div>relaxed</div>
+                <div>sympathetic</div>
+                <div>caring</div>
+                <div>happy</div>
+                <div>mature</div>
+                <div>religious</div>
+                <div>tense</div>
+                <div>cheerful</div>
+
+
+                <div>helpful</div>
+                <div>modest</div>
+                <div>responsive</div>
+                <div>trustworthy</div>
+                <div>clever</div>
+                <div>idealistic</div>
+                <div>nervous</div>
+                <div>searching</div>
+                <div>warm</div>
+
+
+                <div>complex</div>
+                <div>independent</div>
+                <div>observant</div>
+                <div>self-assertive</div>
+                <div>wise</div>
+                <div>confident</div>
+                <div>ingenious</div>
+                <div>organised</div>
+                <div>self-conscious</div>
+
+                </table>
+                <button id="done">done</button>
+            </div>
         </div>
-    </div>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script type='text/javascript' src="js/johari.js"></script>
+        <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+        <script type='text/javascript' src="js/johari.js"></script>
 </body>
 
 </html>
