--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Hi!</h2>
             <p>Thanks for offering to provide feedback :)<br />
                 The excerise I'm using is called a Johari Window<br />
-                Select up to five or six of the adjectives you feel best describe me<br />
+                Select up to five or six of the adjectives you feel best describe me<br /><br />
                 Thanks! James
             </p>
             <button id="ok">OK</button>
@@ -21,10 +21,13 @@
     </div>
 
     <div id='messages'>
-        <div id='messagesText'></div>
-        <button id="messagesOk">OK</button>
+        <article>
+            <div id='messagesText'></div>
+            <button id="messagesOk">OK</button>
+        </article>
     </div>
-    <table id='adjectives'>
+
+    <table id='adjectives' cellpadding='0' cellspacing='0'>
         <tr>
             <td>able</td>
             <td>dependable</td>
